# pytorcs

./: .gitignore  README.md  evaluate.py
SACPID/: .gitignore  autostart.sh  gym_torcs.py  requirements.txt  run_train_spot.sh  sacpid_env_presets.py  sensor_monitor.py  snakeoil3_gym.py  test_drive.py  torcs_omnisafe_wrapper.py  train_sacpid.py
docker/: Dockerfile  Dockerfile.eval  docker-compose.yml  entrypoint.sh
docs/: EVAL.md  WINDOWS.md
eval/: evaluate.py  report.py  requirements.txt  runner.py  server.py
gym_torcs/: .example.env  (+8 more)
paralell-torcs-training/: eval_ppo.py  pyproject.toml  torcs_client.py  torcs_env.py  train.py  train_ppo.py  utils.py  wrappers.py
paralell-torcs-training/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  orchestrate.py
paralell-torcs-training/docker/cluster/: docker-compose.yml
paralell-torcs-training/docker/visual/: docker-compose.yml  entrypoint.sh
paralell-torcs-training/examples/: example_config.py  example_reward_function.py
paralell-torcs-training/examples/SAC/: 1_26_12_lap
paralell-torcs-training/experiments/: README.md
paralell-torcs-training/experiments/(Jimi) 11-03-2026/: train.py
paralell-torcs-training/experiments/PPO-1/: config-1.py  config-2.py  config-3.py  config-4.py  reward_functions.py
paralell-torcs-training/experiments/PPO-1/learning-the-basics_2026_05_21_03-57-17/monitor/: monitor.csv
paralell-torcs-training/experiments/PPO-1/learning-the-basics_2026_05_21_04-06-15/monitor/: monitor.csv
paralell-torcs-training/src/pytorcs/: evaluator.py  torcs_client.py  trainer.py  utils.py
(+37 files in other folders)
